--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,72 @@
+*{
+    box-sizing: border-box;
+}
 
+body{
+    width: 100%;
+    height: 100%;
+}
+#redirect{
+    background-color: black;
+    color: white;
+    padding:10px;
+    border-radius: 8px;
+
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+}
+#search-button{
+    border-radius: 50%;
+    background-color: white;
+    border:none;
+    cursor: pointer;
+}
+
+#search-form-body{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 50px;
+}
+.form-heading{
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#history-form-body{
+display: none;
+flex-wrap: wrap;
+row-gap: 10px;
+margin-top: 50px;
+}
+.history-card{
+    background-color: #d9d9d9;
+    width: 30%;
+    margin: 0 auto;
+    display: inline-block;
+    padding:10px;
+}
+.history-card-heading{
+    font-weight: bold;
+    font-size: 16px;
+}
+.history-card-sub-heading{
+    font-weight: 400;
+    font-size: 13px; 
+    overflow-wrap: break-word;
+}
+
+.history-card-button{
+    border: none; 
+    background-color: transparent;  
+    cursor: pointer; 
+}
+
+#result{
+    margin-top: 30px;
+}
