--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,211 @@
-*{
-    box-sizing: border-box;
-}
-
-body{
-    width: 100%;
-    height: 100%;
-}
-#redirect{
-    background-color: black;
-    color: white;
-    padding:10px;
-    border-radius: 8px;
-
-}
-nav{
-    display: flex;
-    justify-content: space-between;
-}
-#search-button{
-    border-radius: 50%;
-    background-color: white;
-    border:none;
-    cursor: pointer;
-}
-
-#search-form-body{
-    display: flex;
-    width: 100%;
-    align-items: center;
+body
+{   
+    font-family: Verdana, Arial, Helvetica, sans-serif;
     justify-content: center;
-    flex-direction: column;
-    margin-top: 50px;
+    padding: 100px;
+    align-items: center;
+    text-align: center;
+    font-weight: bolder;
+    
 }
-.form-heading{
+
+main h1{
+    justify-content: center;
+    padding-left: 250px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size:50px;
+    font-weight: bolder;
+}
+.book-img{
+    height: 80px;
+    width: 80px;
+}
+.first{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 50px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bolder;
+    font-size: 160px;
+}
+#user_input
+{
+    width: 350px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: gray;
+}
+.second
+{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+label{
+    font-family:cursive;
+    font-size: 30px;
+    font-weight: 800;
+    align-content: center;
+    padding-left: 20px;
+    border-radius: 15px;
+}
+.second #search
+{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding-left: 10px;
+}
+#btn
+{
+   width: 100px;
+   height: 50px;
+   margin-left: 200px;
+
+}
+.btn-circle.btn-xl {
+    width: 50px;
+    height: 50px;
+    padding: 8px 12px;
+    border-radius: 35px;
+    font-size: 24px;
+    line-height: 1.33;
+}
+.container
+{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 50px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bolder;
+
+}
+.container h2{
+    font-size: 50px;
+}
+#search2nd
+{
+    width:150px;
+    height: 60px;
+    font-size: 30px;
+    margin-left:200px ;
+}
+#search3rd{
+    margin-bottom: 15px;
+}
+
+.details {
+    padding: 2px 2px;
     color: black;
+    text-shadow: 1px 1px #bbb;
+    text-align: center;
+  }
+  
+  
+  #card-container
+  {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px 10px;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 10px;
+    }
+  .card{
+      height: 500px;
+      width: 400px;
+      transition: 2s;
+      box-shadow: 0px 10px 24px 0px rgba(0, 0, 0, 0.75);
+     text-align: center;
+     padding: 2px 2px;
+    color: black;
+    text-shadow: 1px 1px #bbb;
+    text-align: center;
+    display: flex;
+  justify-content: center;
+  padding-top: 10px 10px;
+  flex-wrap: wrap;
+  align-items: center;
+
+  }
+  #forsearch{
+    width:200px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: gray;
+    margin-bottom: 15px;margin-right: 10px;
+    
+  }
+  .card {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+h2 {
     font-size: 20px;
-    font-weight: bold;
+    margin-bottom: 5px;
 }
 
-#history-form-body{
-display: none;
-flex-wrap: wrap;
-row-gap: 10px;
-margin-top: 50px;
-}
-.history-card{
-    background-color: #d9d9d9;
-    width: 30%;
-    margin: 0 auto;
-    display: inline-block;
-    padding:10px;
-}
-.history-card-heading{
-    font-weight: bold;
-    font-size: 16px;
-}
-.history-card-sub-heading{
-    font-weight: 400;
-    font-size: 13px; 
-    overflow-wrap: break-word;
+p {
+    font-size: 14px;
+    margin-bottom: 0;
 }
 
-.history-card-button{
-    border: none; 
-    background-color: transparent;  
-    cursor: pointer; 
-}
 
-#result{
-    margin-top: 30px;
+
+/*
+media Queary
+*/
+@media (max-width: 768px) {
+    body {
+        padding: 50px;
+    }
+
+    main h1 {
+        padding-left: 50px;
+        font-size: 40px;
+    }
+
+    .first {
+        font-size: 120px;
+    }
+
+    #user_input {
+        width: 250px;
+        height: 30px;
+    }
+
+    .second #search {
+        width: 30px;
+        height: 30px;
+    }
+
+    #btn {
+        margin-left: 100px;
+    }
+
+    .container h2 {
+        font-size: 40px;
+    }
+
+    #search2nd {
+        width: 100px;
+        height: 40px;
+        font-size: 20px;
+        margin-left: 100px;
+    }
+
+    .card {
+        height: 400px;
+        width: 300px;
+    }
+
+    #forsearch {
+        width: 150px;
+        height: 30px;
+    }
 }
