--- a/styles.css
+++ b/styles.css
@@ -1,217 +1,273 @@
-body
-{   
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    justify-content: center;
-    padding: 100px;
-    align-items: center;
-    text-align: center;
-    font-weight: bolder;
-    
+* {
+  padding: 0;
+  margin: 0;
+  
 }
+body {
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  justify-content: center;
+  /* padding: 100px; */
+  align-items: center;
+  text-align: center;
+  font-weight: bolder;
+  /* background-image: url(https://www.rd.com/wp-content/uploads/2017/10/This-Is-How-Long-It-Takes-To-Read-The-Whole-Dictionary_509582812-Billion-Photos_FT.jpg); */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
+  
+}
+/* .navbar {
+  display: flex;
+  list-style: none;
 
-main h1{
-    justify-content: center;
-    padding-left: 250px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size:50px;
-    font-weight: bolder;
+  justify-content: space-between;
+  background-color: red;
 }
-.book-img{
-    height: 80px;
-    width: 80px;
+.navbar li {
+  margin: 0 20px;
+} */
+
+main h1 {
+  justify-content: center;
+  text-align: center;
+  /* padding-left: 250px; */
+  margin-top: 20px;
+  color: purple;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 50px;
+  font-weight: bolder;
 }
-.first{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding-top: 50px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bolder;
-    font-size: 160px;
+.book-img {
+  height: 80px;
+  width: 80px;
 }
-#user_input
-{
-    width: 350px;
-    height: 40px;
-    border-radius: 20px;
+.first {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-weight: bolder;
+  font-size: 160px;
+  color: purple;
+}
+#user_input {
+  width: 350px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: none;
+  /* border: none; */
+  cursor: pointer;
+}
+#inputDiv{
     background-color: white;
-    cursor: pointer;
-}
-.second
-{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-label{
-    font-family:cursive;
-    font-size: 30px;
-    font-weight: 800;
-    align-content: center;
-    padding-left: 20px;
     border-radius: 15px;
-}
-.second #search
-{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    padding-left: 10px;
-}
-#btn
-{
-   width: 100px;
-   height: 50px;
-   margin-left: 200px;
+    padding: 0 15px;
 
+}
+.second {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+label {
+  font-family: cursive;
+  font-size: 30px;
+  font-weight: 800;
+  align-content: center;
+  padding-left: 20px;
+  border-radius: 15px;
+  color: white;
+}
+.second #search {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding-left: 10px;
+}
+#btn {
+  width: 100px;
+  height: 50px;
+  margin-left: 200px;
+  background-color: gray;
+  color: black;
+}
+#btn:hover {
+  cursor: pointer;
+  transition: all 0.5s;
+  background-color: purple;
+  
 }
 .btn-circle.btn-xl {
-    width: 50px;
-    height: 50px;
-    padding: 8px 12px;
-    border-radius: 35px;
-    font-size: 24px;
-    line-height: 1.33;
+  width: 50px;
+  height: 50px;
+  padding: 8px 12px;
+  border-radius: 35px;
+  font-size: 24px;
+  line-height: 1.33;
 }
-.container
-{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding-top: 50px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bolder;
+#container{
+  margin-top: 50px;
+  margin-left: 100px;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-weight: bolder;
+  
+}
+.container h2 {
+  font-size: 50px;
+  color: purple;
+}
+#search2nd {
+  width: 150px;
+  height: 40px;
+  font-size: 20px;
+  margin-left: 200px;
+  margin-right: 10px;
+  justify-content: center;
+  background-color: gray;
+}
+#search2nd:hover{
+  cursor: pointer;
+  transition: all 0.5s;
+  background-color: black;
+}
+#search3rd {
+  margin-bottom: 15px;
+  background-color: gray;
+}
+#search3rd:hover{
+  cursor: pointer;
+  transition: all 0.5s;
+  background-color: black;
+}
 
-}
-.container h2{
-    font-size: 50px;
-}
-#search2nd
-{
-    width:150px;
-    height: 40px;
-    font-size: 20px;
-    margin-left:200px ;
-    justify-content: center;
-}
-#search3rd{
-    margin-bottom: 15px;
-}
-#clearhistory{
-    margin-bottom: 15px;
+#clearhistory {
+  margin-bottom: 15px;
 }
 
 .details {
-    padding: 2px 2px;
-    color: black;
-    text-shadow: 1px 1px #bbb;
-    text-align: center;
-  }
-  
-  
-  #card-container
-  {
-    display: flex;
-    justify-content: center;
-    padding-top: 10px 10px;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 10px;
-    }
-  .card{
-      height: 500px;
-      width: 400px;
-      transition: 2s;
-      box-shadow: 0px 10px 24px 0px rgba(0, 0, 0, 0.75);
-     text-align: center;
-     padding: 2px 2px;
-    color: black;
-    text-shadow: 1px 1px #bbb;
-    text-align: center;
-    display: flex;
+  padding: 2px 2px;
+  color: black;
+  text-shadow: 1px 1px #bbb;
+  text-align: center;
+}
+
+#card-container {
+  display: flex;
   justify-content: center;
   padding-top: 10px 10px;
   flex-wrap: wrap;
   align-items: center;
-
-  }
-  #forsearch{
-    width:200px;
-    height: 40px;
-    border-radius: 20px;
-    background-color: white;
-    margin-bottom: 15px;margin-right: 10px;
-    color: black;
-    
-  }
-  .card {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  gap: 10px;
+}
+.card {
+  height: 500px;
+  width: 400px;
+  transition: 2s;
+  box-shadow: 0px 10px 24px 0px rgba(0, 0, 0, 0.75);
+  text-align: center;
+  padding: 2px 2px;
+  color: black;
+  text-shadow: 1px 1px #bbb;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  padding-top: 10px 10px;
+  flex-wrap: wrap;
+  align-items: center;
+}
+#forsearch {
+  width: 200px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: white;
+  margin-bottom: 15px;
+  margin-right: 10px;
+  color: black;
+}
+.card {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 h2 {
-    font-size: 20px;
-    margin-bottom: 5px;
+  font-size: 20px;
+  margin-bottom: 5px;
 }
 
 p {
-    font-size: 14px;
-    margin-bottom: 0;
+  font-size: 14px;
+  margin-bottom: 0;
 }
-
-
 
 /*
 media Queary
 */
 @media (max-width: 768px) {
-    body {
-        padding: 50px;
-    }
+  body {
+    padding: 50px;
+  }
 
-    main h1 {
-        padding-left: 50px;
-        font-size: 40px;
-    }
+  main h1 {
+    padding-left: 50px;
+    font-size: 30px;
+  }
+  .book-img {
+    height: 50px;
+    width: 50px;
+  }
 
-    .first {
-        font-size: 120px;
-    }
+  .first {
+    padding-top: 35px;
+    font-size: 120px;
+  }
 
-    #user_input {
-        width: 250px;
-        height: 30px;
-    }
+  #user_input {
+    width: 250px;
+    height: 30px;
+  }
+  label {
+    font-size: 20px;
+    padding-left: 15px;
+  }
 
-    .second #search {
-        width: 30px;
-        height: 30px;
-    }
+  .second #search {
+    width: 25px;
+    height: 25px;
+    padding-left: 8px;
+  }
 
-    #btn {
-        margin-left: 100px;
-    }
+  #btn {
+    width: 90px;
+    height: 40px;
+    margin-left: 50px;
+  }
 
-    .container h2 {
-        font-size: 40px;
-    }
+  .container h2 {
+    font-size: 35px;
+  }
 
-    #search2nd {
-        width: 100px;
-        height: 40px;
-        font-size: 20px;
-        margin-left: 100px;
-    }
+  #search2nd {
+    width: 100px;
+    height: 40px;
+    font-size: 20px;
+    margin-left: 100px;
+  }
 
-    .card {
-        height: 400px;
-        width: 300px;
-    }
+  .card {
+    height: 300px;
+    width: 200px;
+  }
 
-    #forsearch {
-        width: 150px;
-        height: 30px;
-    }
+  #forsearch {
+    width: 150px;
+    height: 30px;
+  }
 }
